--- a/thirtyfive/package.json
+++ b/thirtyfive/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
+    "react-awesome-reveal": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
